--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^0.23.0"
+    "astro": "^0.23.0",
+    "tailwindcss": "^3.0.23"
+  },
+  "dependencies": {
+    "@astrojs/renderer-svelte": "^0.4.0"
   }
 }
