--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@types/tailwindcss": "^3.0.8",
     "astro": "^0.23.0",
     "tailwindcss": "^3.0.23"
   },
